<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2023 Commonwealth Scientific and Industrial Research
  ~ Organisation (CSIRO) ABN 41 687 119 230.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>au.csiro.pathling</groupId>
  <artifactId>pathling</artifactId>
  <version>8.0.0</version>
  <packaging>pom</packaging>

  <name>Pathling</name>
  <description>
    A set of tools that make it easier to use FHIR® within data analytics, built on Apache Spark.
  </description>
  <url>https://pathling.csiro.au</url>

  <developers>
    <developer>
      <name>John Grimes</name>
      <email>John.Grimes@csiro.au</email>
      <url>https://github.com/johngrimes</url>
    </developer>
    <developer>
      <name>Piotr Szul</name>
      <email>Piotr.Szul@csiro.au</email>
      <url>https://github.com/piotrszul</url>
    </developer>
  </developers>
  
  <modules>
    <module>schema</module>
  </modules>

  <organization>
    <name>Australian e-Health Research Centre, CSIRO</name>
    <url>https://aehrc.csiro.au</url>
  </organization>
  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0</url>
    </license>
  </licenses>

  <scm>
    <url>https://github.com/aehrc/pathling</url>
    <developerConnection>scm:git:https://github.com/aehrc/pathling.git</developerConnection>
  </scm>
  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/aehrc/pathling/issues</url>
  </issueManagement>
  <ciManagement>
    <system>GitHub Actions</system>
    <url>https://github.com/aehrc/pathling/actions</url>
  </ciManagement>

  <properties>
    <project.majorVersion>8</project.majorVersion>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <pathling.sparkVersion>3.5.0</pathling.sparkVersion>
    <pathling.scalaVersion>2.12</pathling.scalaVersion>
    <pathling.scalaFullVersion>2.12.17</pathling.scalaFullVersion>
    <pathling.hapiFhirVersion>7.0.2</pathling.hapiFhirVersion>
    <pathling.surefireVersion>3.2.5</pathling.surefireVersion>
    <pathling.jacksonVersion>2.16.1</pathling.jacksonVersion>
    <pathling.jerseyVersion>2.40</pathling.jerseyVersion>
    <pathling.jacksonVersion>2.15.4</pathling.jacksonVersion>
    <pathling.junitVersion>5.9.1</pathling.junitVersion>
    <pathling.jettyVersion>9.4.44.v20210927</pathling.jettyVersion>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.apache.spark</groupId>
        <artifactId>spark-sql_${pathling.scalaVersion}</artifactId>
        <version>${pathling.sparkVersion}</version>
      </dependency>
      <dependency>
        <groupId>ca.uhn.hapi.fhir</groupId>
        <artifactId>hapi-fhir-bom</artifactId>
        <version>${pathling.hapiFhirVersion}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.scala-lang.modules</groupId>
        <artifactId>scala-java8-compat_${pathling.scalaVersion}</artifactId>
        <version>1.0.2</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jersey.containers</groupId>
        <artifactId>jersey-container-servlet-core</artifactId>
        <version>${pathling.jerseyVersion}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>${pathling.jacksonVersion}</version>
      </dependency>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${pathling.junitVersion}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>javax.servlet</groupId>
        <artifactId>javax.servlet-api</artifactId>
        <version>4.0.1</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-server</artifactId>
        <version>${pathling.jettyVersion}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-servlet</artifactId>
        <version>${pathling.jettyVersion}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-util</artifactId>
        <version>${pathling.jettyVersion}</version>
      </dependency>
      <dependency>
        <groupId>org.skyscreamer</groupId>
        <artifactId>jsonassert</artifactId>
        <version>1.5.1</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
          <configuration>
            <source>17</source>
            <target>17</target>
            <compilerArgs>
              <arg>-Xlint:all,-processing</arg>
            </compilerArgs>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${pathling.surefireVersion}</version>
          <configuration>
            <useSystemClassLoader>true</useSystemClassLoader>
            <useManifestOnlyJar>false</useManifestOnlyJar>
            <!-- The add-exports and add-opens flags are required for Java 17 -->
            <argLine>-Xmx4g -ea -Duser.timezone=UTC --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED</argLine>
            <forkCount>1C</forkCount>
            <failIfNoTests>false</failIfNoTests>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>
